--- a/Proyecto FINAL/css/index.css
+++ b/Proyecto FINAL/css/index.css
@@ -12,9 +12,11 @@
 	transition: .3s ease-in-out;
 	overflow: hidden;
 }
+
 .cart-boton:hover {
 	background-color: #35269b;
 }
+
 .cart-boton:active {
 	transform: scale(.9);
 }
@@ -25,16 +27,18 @@
 	top: 50%;
 	left: -10%;
 	font-size: 2em;
-	transform: translate(-50%,-50%);
+	transform: translate(-50%, -50%);
 }
+
 .cart-boton .fa-box {
 	position: absolute;
 	z-index: 3;
 	top: -20%;
 	left: 52%;
 	font-size: 1.2em;
-	transform: translate(-50%,-50%);
+	transform: translate(-50%, -50%);
 }
+
 .cart-boton span {
 	position: absolute;
 	z-index: 3;
@@ -42,11 +46,13 @@
 	top: 50%;
 	font-size: 1.2em;
 	color: #fff;
-	transform: translate(-50%,-50%);
+	transform: translate(-50%, -50%);
 }
+
 .cart-boton span.anadir {
 	opacity: 1;
 }
+
 .cart-boton span.anadido {
 	opacity: 0;
 }
@@ -54,51 +60,70 @@
 .cart-boton.clicked .fa-shopping-cart {
 	animation: cart 1.5s ease-in-out forwards;
 }
+
 .cart-boton.clicked .fa-box {
 	animation: box 1.5s ease-in-out forwards;
 }
+
 .cart-boton.clicked span.anadir {
 	animation: txt1 1.5s ease-in-out forwards;
 }
+
 .cart-boton.clicked span.anadido {
 	animation: txt2 1.5s ease-in-out forwards;
 }
+
 @keyframes cart {
 	0% {
 		left: -10%;
 	}
-	40%, 60% {
+
+	40%,
+	60% {
 		left: 50%;
 	}
+
 	100% {
 		left: 110%;
 	}
 }
+
 @keyframes box {
-	0%, 40% {
+
+	0%,
+	40% {
 		top: -20%;
 	}
+
 	60% {
 		top: 40%;
 		left: 52%;
 	}
+
 	100% {
 		top: 40%;
 		left: 112%;
 	}
 }
+
 @keyframes txt1 {
 	0% {
 		opacity: 1;
 	}
-	20%, 100% {
+
+	20%,
+	100% {
 		opacity: 0;
 	}
 }
+
 @keyframes txt2 {
-	0%, 80% {
+
+	0%,
+	80% {
 		opacity: 0;
 	}
+
 	100% {
 		opacity: 1;
 	}
@@ -115,32 +140,41 @@
 
 footer {
 	background: #2a2e32;
-  }
-  
-  .text-small {
+}
+
+.text-small {
 	font-size: 0.9rem;
-  }
-  
-  a {
+}
+
+a {
 	color: inherit;
 	text-decoration: none;
 	transition: all 0.3s;
-  }
-  
-  a:hover, a:focus {
+}
+
+a:hover,
+a:focus {
 	text-decoration: none;
-  }
-  
-  .form-control {
+}
+
+.form-control {
 	background: #212529;
 	border-color: #545454;
-  }
-  
-  .form-control:focus {
+}
+
+.form-control:focus {
 	background: #212529;
-  }
-  
-  footer {
+}
+
+footer {
 	background: #212529;
-  }
-  
+}
+
+.text-precio {
+	color: #28a745;
+}
+
+.prod-recomendado {
+	font-size: 2,2em;
+	color: #212529;
+}
