Se integra nueva pagina de perfil

--- a/Proyecto FINAL/css/indexdark.css
+++ b/Proyecto FINAL/css/indexdark.css
@@ -37,3 +37,11 @@ body {
 .offcanvas table td {
     color: whitesmoke;
 }
+
+.sidebar {
+    background-color: #212529;
+}
+
+table td, table th {
+    color: whitesmoke;
+}
