--- a/Proyecto FINAL/css/index.css
+++ b/Proyecto FINAL/css/index.css
@@ -165,10 +165,15 @@ a:focus {
 .form-control {
 	background: #212529;
 	border-color: #545454;
+	color: whi;
 }
 
 .form-control:focus {
 	background: #212529;
+}
+
+.offcanvas-end {
+	width: 600px;
 }
 
 footer {
